syntax = "proto3";

package oms;

service ProductService {
    rpc Get(GetProductRequest) returns (Product) {}
    rpc List(ListProductsRequest) returns (ListProductsResponse) {}
    rpc Create(CreateProductRequest) returns (Product) {}
    rpc Update(UpdateProductRequest) returns (Product) {}
    rpc Delete(DeleteProductRequest) returns (DeleteProductResponse) {}
    rpc DecrementQty(DecrementQtyRequest) returns (DecrementQtyResponse) {}
}

message Product {
    string id = 1;
    string name  = 2;
    string description = 3;
    int32 price = 4;
    int32 available_qty = 5;
    bool is_active = 6;
}

message GetProductRequest {
    string product_id = 1;
}

message ListProductsRequest {
    repeated string product_ids = 1;
}
message ListProductsResponse {
    repeated Product products = 1;
}

message CreateProductRequest {
    string name  = 1;
    string description = 2;
    int32 price = 3;
    int32 available_qty = 4;
}
message CreateProductResponse {
    Product product = 1;
}

message UpdateProductRequest {
    string product_id = 1;
    string name  = 2;
    string description = 3;
    int32 price = 4;
    int32 available_qty = 5;
}

message DeleteProductRequest {
    string product_id = 1;
}

message DeleteProductResponse {
    string product_id = 1;
    string message = 2;
}

message DecrementQtyRequest {
    string product_id = 1;
    int32  offset = 2;
}

message DecrementQtyResponse {
    string product_id = 1;
    string message = 2;
}